7403-patch for ssl failing to load cert in the build environments

--- a/Dev/Dev2.Server/userServerSettings.config
+++ b/Dev/Dev2.Server/userServerSettings.config
@@ -2,7 +2,7 @@
 <appSettings>
   <add key="webServerPort" value="3142" />
   <add key="webServerSslPort" value="3143" />
-  <add key="sslCertificateName" value="WarewolfServer.cer" />
+  <add key="sslCertificateName" value="WarewolfServer.pfx" />
   <add key="CollectUsageStats" value="False" />
   <add key="DaysToKeepTempFiles" value="2" />
 </appSettings>
