--- a/Dev/.azure/pipeline.yml
+++ b/Dev/.azure/pipeline.yml
@@ -63,9 +63,8 @@ stages:
         artifactName: 'ServerBinaries'
         targetPath: '$(Agent.BuildDirectory)'
   
-    - script: |
-        "$(Agent.BuildDirectory)\Warewolf Server.exe"
-      displayName: 'Run Server
+    - script: '$(Agent.BuildDirectory)\Warewolf Server.exe'
+      displayName: 'Run Server'
 
 #  - job: Unit_Tests
 #    displayName: 'Unit Tests'
