7403-patch this path

--- a/Dev/.azure/pipeline.yml
+++ b/Dev/.azure/pipeline.yml
@@ -63,7 +63,7 @@ stages:
         artifactName: 'ServerBinaries'
         targetPath: '$(Agent.BuildDirectory)'
   
-    - script: '$(Agent.BuildDirectory)\Warewolf Server.exe'
+    - script: '"$(Agent.BuildDirectory)\Warewolf Server.exe"'
       displayName: 'Run Server'
 
 #  - job: Unit_Tests
