--- a/Dev/Dev2.Server/Dev2.Server.csproj
+++ b/Dev/Dev2.Server/Dev2.Server.csproj
@@ -304,7 +304,9 @@
   <ItemGroup>
     <AdditionalFiles Include="..\.sonarlint\warewolf_dotnet_framework\CSharp\SonarLint.xml" Link="SonarLint.xml" />
     <Content Include="appsettings.Development.json" />
-    <Content Include="appsettings.json" />
+    <Content Include="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Main.ico" />
   </ItemGroup>
   <ItemGroup>
