Changes with regards type ref in ESBHub.AddItemMessage

--- a/Dev/Dev2.Common.Interfaces/Dev2.Common.Interfaces.csproj
+++ b/Dev/Dev2.Common.Interfaces/Dev2.Common.Interfaces.csproj
@@ -218,6 +218,7 @@
     <Compile Include="IManageWcfSourceViewModel.cs" />
     <Compile Include="IManageWebserviceSourceViewModel.cs" />
     <Compile Include="IMenuView.cs" />
+    <Compile Include="Infrastructure\Communication\IEsbMessage.cs" />
     <Compile Include="IOptionsWithNotifier.cs" />
     <Compile Include="IRedisServiceSource.cs" />
     <Compile Include="IRedisSourceViewModel.cs" />
