Added secureSettings in app.config Update Readme and failed spec remedies.xlsx to pass tests

--- a/Dev/Dev2.IntegrationTests/app.config
+++ b/Dev/Dev2.IntegrationTests/app.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <section name="secureSettings" type="System.Configuration.NameValueSectionHandler" />
+  </configSections>
+  <secureSettings configSource="Warewolf Server.exe.secureconfig" />
   <appSettings>
     <add key="GitRegistryKey" value="SOFTWARE\Classes\Directory\background\shell\git_shell\command"/>
   </appSettings>
