--- a/Dev/Dev2.Activities/Dev2.Activities.csproj
+++ b/Dev/Dev2.Activities/Dev2.Activities.csproj
@@ -29,6 +29,12 @@
     </NuGetPackageImportStamp>
     <RestoreAdditionalProjectSource>https://www.myget.org/F/uipath-dev/api/v3/index.json</RestoreAdditionalProjectSource>
   </PropertyGroup>
+  <PropertyGroup>
+    <ContentSQLiteInteropFiles>true</ContentSQLiteInteropFiles>
+    <CopySQLiteInteropFiles>false</CopySQLiteInteropFiles>
+    <CleanSQLiteInteropFiles>false</CleanSQLiteInteropFiles>
+    <CollectSQLiteInteropFiles>false</CollectSQLiteInteropFiles>
+ </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
