--- a/Dev/Warewolf.Driver.Serilog.Tests/Warewolf.Driver.Serilog.Tests.csproj
+++ b/Dev/Warewolf.Driver.Serilog.Tests/Warewolf.Driver.Serilog.Tests.csproj
@@ -5,6 +5,12 @@
     <Configurations>Debug</Configurations>
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
   </PropertyGroup>
+  <PropertyGroup>
+    <ContentSQLiteInteropFiles>true</ContentSQLiteInteropFiles>
+    <CopySQLiteInteropFiles>false</CopySQLiteInteropFiles>
+    <CleanSQLiteInteropFiles>false</CleanSQLiteInteropFiles>
+    <CollectSQLiteInteropFiles>false</CollectSQLiteInteropFiles>
+ </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.1" />
     <PackageReference Include="Microsoft.TestPlatform.ObjectModel" Version="17.4.1" />
