--- a/Dev/Dev2.Sql.Tests/Dev2.Sql.Tests.csproj
+++ b/Dev/Dev2.Sql.Tests/Dev2.Sql.Tests.csproj
@@ -35,6 +35,12 @@
     <SonarQubeExclude>True</SonarQubeExclude>
     <TargetFrameworkProfile />
   </PropertyGroup>
+  <PropertyGroup>
+    <ContentSQLiteInteropFiles>true</ContentSQLiteInteropFiles>
+    <CopySQLiteInteropFiles>false</CopySQLiteInteropFiles>
+    <CleanSQLiteInteropFiles>false</CleanSQLiteInteropFiles>
+    <CollectSQLiteInteropFiles>false</CollectSQLiteInteropFiles>
+ </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
@@ -94,11 +100,18 @@
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.1" />
     <PackageReference Include="Microsoft.TestPlatform.ObjectModel" Version="17.4.1" />
-	<PackageReference Include="Moq" Version="4.18.2" />
-	<PackageReference Include="MSTest.TestFramework" Version="3.0.2" />
-	<PackageReference Include="MSTest.TestAdapter" Version="3.0.2" />
+    <PackageReference Include="Moq" Version="4.18.2" />
+    <PackageReference Include="MSTest.TestFramework" Version="3.0.2" />
+    <PackageReference Include="MSTest.TestAdapter" Version="3.0.2" />
     <PackageReference Include="TSQL.Parser" Version="2.6.0" />
   </ItemGroup>
+  <PropertyGroup>
+    <PostBuildEvent>
+      if exist "$(SolutionDir)Dev\Dev2.Sql.Tests\bin\Debug\net6.0-windows\win\Dev2.Sql.Tests.dll" (
+      echo D | xcopy /Y /E /F /D "$(SolutionDir)Server Tests Setup\SQLite.Interop.dll" "$(SolutionDir)Dev\Dev2.Sql.Tests\bin\Debug\net6.0-windows\win"
+      )
+    </PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
