DevOps-wrong path here to find test results in the build

--- a/Dev/.azure/pipeline.yml
+++ b/Dev/.azure/pipeline.yml
@@ -2667,7 +2667,7 @@ stages:
         failTaskOnFailedTests: true
         testRunTitle: 'Log Settings View Model Construct Unit Tests'
         
-    - script: 'if not exist "$(Agent.BuildDirectory)\s\bin\BuildUnderTest\TestResults\*.trx" exit 1'
+    - script: 'if not exist "$(Agent.BuildDirectory)\TestResults\*.trx" exit 1'
   
   - job: Elasticsearch_View_Models_Unit_Tests
     displayName: 'Elasticsearch View Model Unit Tests'
