Fixed failed tests in Dev2.Studio.Core.Tests (work item - 7450)
TextContaningTabIsPasedIntoAnIntellisenseTextBoxExpectedTabInsertedEventIsRaised

TabGroupPaneBindingBehavior_SetDocumentHost_CanSetDocumentHost

DragDropHelpers_PreventDrop_GetDataReturnsExplorerItemModelSource_ReturnsFalse

DragDropHelpers_PreventDrop_EmptyService_ReturnsFalse

DragDropHelpers_PreventDrop_DropResourceOntoItself_ReturnsFalse

--- a/Dev/Dev2.Studio/Dev2.Studio.csproj
+++ b/Dev/Dev2.Studio/Dev2.Studio.csproj
@@ -841,6 +841,8 @@
 	  <PackageReference Include="FontAwesome6.Fonts" Version="2.3.0" />
 	  <PackageReference Include="FontAwesome6.Fonts.WinUI" Version="2.3.0" />
 	  <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.39" />
+    <PackageReference Include="System.Security.Permissions" Version="7.0.0" />
+
   </ItemGroup>
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
